--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "rescript": "^9.1.4",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "re:build": "rescript",
+    "re:watch": "rescript build -w"
   },
   "eslintConfig": {
     "extends": [
